# aoc2024

./: .gitignore  Cargo.toml  bb.edn
.github/workflows/: codspeed.yml
benches/: aoc_bench.rs
benches/aoc/aoc-autobench/benches/: aoc_benchmark_copy.rs
src/: day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day17.rs  day19.rs  day2.rs  day21.rs  day22.rs  day3.rs  day7.rs  day8.rs  day9.rs  lib.rs
