[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
solution = { git = "https://github.com/enigma/aoc2024", version = "0.1.0", package = "aoc2024" }


[[bench]]
name = "main"
harness = false
path = "benches/aoc/aoc-autobench/benches/aoc_benchmark_copy.rs"

[toolchain]
channel = "nightly"
