[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
arrayvec = "0.7.6"
bincode = "1.3.3"
lazy_static = "1.5.0"
memmap2 = "0.9.5"
regex = "1.11.1"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
solution = { git = "https://github.com/enigma/aoc2024", version = "0.1.0", package = "aoc2024" }


[[bench]]
name = "main"
harness = false
path = "benches/aoc_bench.rs"

[toolchain]
channel = "nightly"

[profile.dev]
stack-size = "16MB"

[profile.test]
stack-size = "16MB"

[profile.release]
stack-size = "16MB"
